[workspace]
members = ["wikiext", "wikiext-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Wikiext is a tool for extracting and processing Wikipedia data, implemented in Rust."
documentation = "https://docs.rs/wikiext"
homepage = "https://github.com/mosuka/wikiext"
repository = "https://github.com/mosuka/wikiext"
readme = "README.md"
keywords = ["wikipedia", "data", "extraction", "processing", "nlp"]
categories = ["text-processing"]
license = "MIT"

[workspace.dependencies]
wikiext = { version = "0.1.0", path = "./wikiext" }

thiserror = "2.0.18"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bzip2 = "0.6.1"
rayon = "1.11.0"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
anyhow = "1.0.102"
quick-xml = "0.39.2"
parse-wiki-text-2 = "0.2.0"
